# SaberDL

./: .gitignore  Cargo.toml  README.md  check.sh  lesson.md
.github/workflows/: ci.yml
src/: auth.rs  config.rs  crypto.rs  error.rs  lib.rs  main.rs  progress.rs  qrlogin.rs  state.rs  url_expander.rs
src/auth/: bilibili.rs  mod.rs  netease.rs
src/downloader/: bilibili.rs  http.rs  mod.rs
src/downloader/bilibili/: mod.rs  wbi.rs
src/downloader/netease/: api.rs  meta.rs  mod.rs  weapi.rs
src/qrlogin/: bilibili.rs  mod.rs  netease.rs
