[package]
name = "SaberDL"
version = "0.1.0"
edition = "2024"

[dependencies]
# HTTP 客户端。blocking = 同步阻塞 API；rustls-tls = 用纯 Rust 的 TLS
# 实现，避免依赖系统 OpenSSL（在 Windows / 各种 Linux 上更省心喵）
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"

# 应用层错误处理：自带 ? 传播 + .context() 添加错误链
anyhow = "1"
