[package]
name = "SaberDL"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "stream"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
indicatif = { version = "0.18", features = ["tokio"] }
anyhow = "1"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
