[package]
name = "saber-dl"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "SaberDL"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "stream", "cookies", "query", "form"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
thiserror = "2"
indicatif = { version = "0.18", features = ["tokio"] }
anyhow = "1"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
url = "2"
qrcode = "0.14"
dirs = "5"
toml = "0.8"
tempfile = "3"
aes-gcm = "0.10"
blake3 = "1"
base64 = "0.22"
machine-uid = "0.5"
md5 = "0.7"
urlencoding = "2"
flate2 = "1"

# 网易云 weapi 加密 (L14b)
aes = "0.8"
cbc = { version = "0.1", features = ["std"] }
num-bigint-dig = "0.8"
num-traits = "0.2"
hex = "0.4"

# 音频元数据 (统一 MP3/FLAC/M4A 等)
lofty = "0.21"
